--- a/src/App.module.less
+++ b/src/App.module.less
@@ -47,3 +47,10 @@
 .read-the-docs {
     color: #888;
 }
+
+@red: red;
+
+.container {
+    margin-top: 12px;
+    border: 1px solid var(--primary-color);
+}
